--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/samahalaymun/-extension-manager.git",
+  "homepage": "https://samahalaymun.github.io/-extension-manager/",
   "name": "extension-manager",
   "private": true,
   "version": "0.0.0",
